--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,7 +40,7 @@
 							</div>
 						<!-- </div> -->
 						<div class="hero-buttons">
-							<a href="#about" id="btn-about" class="btn btn-info btn-lg"><i class="fa fa-arrow-circle-o-down"></i> READ MORE</a>
+							<a href="#about" id="btn-about" class="btn btn-info btn-lg"><i class="fa fa-arrow-circle-o-down"></i> LEARN MORE</a>
 							<a href="#contact" id="btn-contact" class="btn btn-primary btn-lg"><i class="fa fa-phone-square"></i> GET IN TOUCH</a>
 						</div>
 					<!-- </div> -->
@@ -59,15 +59,15 @@
 			<div class="container">
 				<div class="section-heading">
 					<h2>ABOUT ME</h2>
-					<p>A great beginning to know me</p>
+					<!-- <p>A great beginning to know me</p> -->
 					<hr />
 				</div>
 				<div class="section-content">
-					<p>Progressively maintain inexpensive information without intuitive markets. Quickly reconceptualize 2.0 imperatives without next-generation meta-services. Professionally conceptualize plug-and-play metrics without orthogonal information. Appropriately strategize dynamic infrastructures and turnkey channels. Seamlessly synthesize high-quality total linkage without distinctive intellectual capital.</p>
+					<p>Luke VanderDrift has over eight years of experience tackling a wide range of legal problems.  He received his BA from UCLA with honors and attended UCLA School of Law where he was a Teaching Fellow in Contracts and a Senior Articles Editor for the Entertainment Law Review.  After law school, Mr. VanderDrift was a clerk in the Los Angeles Superior Court that assisted judges in writing decisions in a variety of civil disputes.</p>
 
-					<p>Completely reinvent business mindshare with superior strategic theme areas. Dramatically build reliable platforms without real-time e-tailers. Competently predominate covalent scenarios rather than future-proof content. Intrinsicly innovate holistic users whereas cost effective partnerships. Objectively transform collaborative outsourcing before an expanded array of services.
+					<p>Luke VanderDrift was a deputy district attorney in Los Angeles County for five years.  During this time, he represented the state in felony and misdemeanor trials, determined whether charges would be filed, and conducted juvenile delinquency hearings.  Luke VanderDrift left the District Attorney’s Office to return to the Bay Area and focus on a private practice.  He has represented clients in negotiations and litigation throughout Northern California.</p>
 
-					Monotonectally provide access to next-generation imperatives rather than mission-critical materials. Seamlessly negotiate excellent services rather than web-enabled sources. Quickly actualize proactive niches rather than user friendly catalysts for change. Efficiently negotiate distributed experiences for alternative best practices. Efficiently.</p>
+				
 				</div>
 			</div>
 		</div>
@@ -79,48 +79,74 @@
 			<div class="container">
 				<div class="section-heading">
 					<h2>SERVICES</h2>
-					<p>We strive to give the best service to our clients</p>
+					<p>Serving The Greater Bay Area</p>
 					<hr />
 				</div>
 				<div class="section-content">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-checkmark2 service-icon"></span>
-								<div class="service-text">
-									<h3>Elegant Design</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
+						<div class="sol-sm-8 col-sm-offset-2">
+							<div class="row text-left">
+								<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-checkmark2 service-icon"></span>
+										<div class="service-text ">
+										
+											<h3>Contract Disputes</h3>
+										
+											
+											
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-pen service-icon"></span>
-								<div class="service-text">
-									<h3>Carefully Handcrafted</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
+								<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-pen service-icon"></span>
+										<div class="service-text">
+											<h3>Real Property Issues</h3>
+											
+											
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-lab service-icon"></span>
-								<div class="service-text">
-									<h3>Design Formula</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
+								<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-lab service-icon"></span>
+										<div class="service-text">
+											<h3>Employment Accommodations</h3>
+											
+											
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-phone service-icon"></span>
-								<div class="service-text">
-									<h3>Responsive</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
+								<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-phone service-icon"></span>
+										<div class="service-text">
+											<h3>Business Disputes</h3>
+											
+											
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-pen service-icon"></span>
+										<div class="service-text">
+											<h3>Second Opinions</h3>
+											
+											
+										</div>
+									</div>
+								</div>
+									<div class="col-md-6">
+									<div class="service-item">
+										<span class="icon-pen service-icon"></span>
+										<div class="service-text">
+											<h3>Conflict Resolution</h3>
+											
+										
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -211,7 +237,7 @@
 	<!-- FOOTER -->
 	<footer id="footer" class="section">
 		<div class="container">
-			<p class="copyright pull-left">&copy; 2014. The Develovers. All Rights Reserved.</p>
+			<p class="copyright pull-left">&copy; 2014. VanderDrift Law. All Rights Reserved.</p>
 		</div>
 	</footer>
 	<!-- END FOOTER -->
