--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
 					<li class="active"><a href="#top">HOME</a></li>
 					<li><a href="#about">ABOUT ME</a></li>
 				
-					<li><a href="#works">WORKS</a></li>
+					<li><a href="#services">SERVICES</a></li>
 					<li><a href="#contact">CONTACT ME</a></li>
 				</ul>
 			</nav>
@@ -62,15 +62,24 @@
 					<!-- <p>A great beginning to know me</p> -->
 					<hr />
 				</div>
-				<div class="section-content">
-					<p>Luke VanderDrift has over eight years of experience tackling a wide range of legal problems.  He received his BA from UCLA with honors and attended UCLA School of Law where he was a Teaching Fellow in Contracts and a Senior Articles Editor for the Entertainment Law Review.  After law school, Mr. VanderDrift was a clerk in the Los Angeles Superior Court that assisted judges in writing decisions in a variety of civil disputes.</p>
+				<div class="row">
+					<div class="col-sm-3">
+						<%= image_tag "luke.jpg", class: "img-responsive img-thumbnail" %>
+					</div>
+					<div class="col-sm-9">
+						<div class="section-content text-left">
+							<p>Luke VanderDrift has more than eight years of experience and has represented clients in negotiations and litigation throughout Northern California.</p>
 
-					<p>Luke VanderDrift was a deputy district attorney in Los Angeles County for five years.  During this time, he represented the state in felony and misdemeanor trials, determined whether charges would be filed, and conducted juvenile delinquency hearings.  Luke VanderDrift left the District Attorney’s Office to return to the Bay Area and focus on a private practice.  He has represented clients in negotiations and litigation throughout Northern California.</p>
+								<p>Previously Luke VanderDrift was a Deputy District Attorney in Los Angeles County for five years.  During this time, he represented the state in felony and misdemeanor trials, determined whether charges would be filed, and conducted juvenile delinquency hearings.  Luke VanderDrift left the District Attorney’s Office to return to the Bay Area and focus on a private practice. </p>
 
-				
-				</div>
+							<P>He received his BA from UCLA with honors and attended UCLA School of Law where he was a Teaching Fellow in Contracts and a Senior Articles Editor for the Entertainment Law Review.  After law school, Mr. VanderDrift was a clerk in the Los Angeles Superior Court that assisted judges in writing decisions in a variety of civil disputes.</P>
+
+						
+						</div>
+					</div>
 			</div>
 		</div>
+	</div>
 		<!-- END ABOUT -->
 
 	
@@ -163,7 +172,7 @@
 		<div id="contact" class="section contact">
 			<div class="section-heading">
 				<h2>GET IN TOUCH</h2>
-				<p>Now it's time to build a business and relationship</p>
+				<p>Contact Luke VanderDrift About A Free Consultation</p>
 				<hr />
 			</div>
 			<div class="section-content">
@@ -172,20 +181,16 @@
 						<div class="col-md-4">
 							<div class="contact-info">
 								<ul class="list-unstyled">
-									<li>
-										<i class="fa fa-map-marker pull-left"></i>
-										<h3>Address</h3>
-										<p>12345 North Main Street<br />New York, 22334455</p>
-									</li>
+							
 									<li>
 										<i class="fa fa-envelope pull-left"></i>
 										<h3>Phone</h3>
-										<p>+621 234 4567</p>
+										<p>+310 339 1267</p>
 									</li>
 									<li>
 										<i class="fa fa-user pull-left"></i>
 										<h3>Email</h3>
-										<p><a href="mailto:hello@yourdomain.com">hello@yourdomain.com</a></p>
+										<p><a href="mailto:vanderdrift@gmail.com">vanderdrift@gmail.com</a></p>
 									</li>
 								</ul>
 							</div>
